run details overflow fixed

--- a/app/assets/stylesheets/pages/_run-show.scss
+++ b/app/assets/stylesheets/pages/_run-show.scss
@@ -1,23 +1,4 @@
-.run-half-banner {
-  display: flex;
-  justify-content: center;
-  width: 100vw;
-  height: 50vh;
-  margin-top: 4px;
-}
 
-.run-banner-text {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-  width: 50vw;
-  max-width: 50vw;
-  background: $white;
-  h1 {
-    text-align: center;
-  }
-}
 
 #map-container {
   height: 50vh;
